# polymarket-radar

./: .dockerignore  .env.example  .gitignore  BUG_CATALOG.md  CHANGELOG.md  CLAUDE.md  Credentials.env.example  Dockerfile  README.md  RULES.md  docker-compose.yml  idea.md  pyproject.toml  requirements.txt  букмекерки.txt
.claude/skills/async-python-patterns/: SKILL.md
.claude/skills/browser-cache-busting/: SKILL.md
.claude/skills/circuit-breaker-patterns/: SKILL.md
.claude/skills/cloudflare-platform/: SKILL.md
.claude/skills/cross-exchange-execution/: SKILL.md
.claude/skills/cross-platform-arbs/: SKILL.md
.claude/skills/deploy-pipeline/: SKILL.md
.claude/skills/docker-management/: SKILL.md
.github/workflows/: apply-nginx-cp-pairing-diag.yml  apply-nginx-exchange-rtt.yml  apply-nginx-paper-endpoints.yml  apply-nginx-pipeline-timings-and-active-deals.yml  apply-nginx-recent-deals.yml  apply-nginx-recent-near.yml  apply-nginx-scan-health.yml  apply-nginx-ts-metrics.yml  deploy.yml  diagnose-ts-metrics.yml  reset.yml  restore.yml
Executions/: 2026-04-26_filter_analysis.md
Scripts/: analytics.py  arb_server.py  async_fetchers.py  circuit_breaker.py  config.py  contracts.py  cross_platform.py  dashboard.html  event_matching.py  exchange_latency_probe.py  fee_tracker.py  http_codes.py  limitless_approve.py  limitless_hmac.py  limitless_ws.py  lint_dashboard_js.py  notify.py  paper_trading.py  poly_derive_api_creds.py  poly_user_ws.py  poly_ws.py  polymarket_approve.py  preflight.py  watchdog.py
Scripts/executor/: __init__.py  atomic.py  bot_connector.py  builders.py  dryrun_log.py  fills.py  pipeline_timing.py  presign.py
Scripts/radar/: __init__.py  build_deal.py  dedup.py  fees.py
Scripts/risk/: __init__.py  killswitch.py  limits.py  network_check.py  reconcile.py  state.py
Scripts/static/: dashboard.css  dashboard.js
Scripts/wallets/: __init__.py  config.py  coordinator.py  rebalance.py  stores.py
deploy/: DEPLOY_PLAYBOOK.md  README.md  ROLLBACK.md  VERIFICATION.md  smoke_test.sh  standby-setup.md  vps_setup.py
docs/: ARCHITECTURE.md  AUTO_DEPLOY_GOTCHAS.md  CREDENTIALS_GUIDE.md  DEPLOY_SETUP.md  OPERATOR_RUNBOOK.md  ORDER_FLOW.md  PLATFORM_DRIFT_AUDIT_2026-05-27.md  PROJECT_AUDIT_2026-05-11.md  PUBLIC_AUDIT_ENDPOINT.md  SKILLS_INDEX.md  TS_HISTORY.md  TS_MIGRATION.md  TS_PHASE5_PLAN.md  TS_REWRITE_PLAN.md
executor-ts/: Dockerfile  README.md  biome.json  package-lock.json  package.json  tsconfig.json
executor-ts/src/: index.ts  server.ts
executor-ts/tests/: dryrun_simpnl.test.ts  fire_payout.test.ts  server_metrics.test.ts
insider-radar/: index.html  package-lock.json  package.json
insider-radar/public/: trades_data.json
insider-radar/src/: App.css  App.jsx  index.css
tests/: conftest.py  test_bot_connector.py  test_build_deal_payout_math.py  test_executor.py  test_limitless.py  test_network_check.py  test_notify.py  test_paper_trading.py  test_phase18_parallel_fetchers.py  test_phase19v10_audit_fixes.py  test_phase19v11_speedups.py  test_phase19v12_pool_visible_parity.py  test_phase19v13_audit_fixes.py  test_phase19v14_audit_fixes.py  test_phase19v15_audit_fixes.py  test_phase19v16_audit_fixes.py  test_phase19v17_lim_phantom.py  test_phase19v18_audit_fixes.py  test_phase19v19_audit_fixes.py  test_phase19v20_audit_fixes.py  test_phase19v21_audit_fixes.py  test_phase19v22_audit_fixes.py  test_phase19v23_lim_sell.py  test_phase19v26_sx_api_fix.py  test_phase19v27_sx_size_field.py  test_phase19v28_market_scope.py  test_phase19v29_outcome_guard.py  test_phase19v29b_complement_cover.py  test_phase19v2_big_batch_integration.py  test_phase19v30_threshold_slug.py  test_phase19v31_quality_env.py  test_phase19v32_exact_score_and_sum.py  test_phase19v33_version_endpoint.py  test_phase19v34_cp_fee_roi.py  test_phase19v35_recent_deals.py  test_phase19v4_batch_market_info.py  test_phase19v65_ui_diag.py  test_phase19v6_guards.py  test_phase19v7_sx_orders_async.py  test_phase19v8_event_index.py  (+54 more)
(+117 files in other folders)
